--- a/F0_AY3.uvprojx
+++ b/F0_AY3.uvprojx
@@ -332,7 +332,7 @@
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
             <VariousControls>
-              <MiscControls></MiscControls>
+              <MiscControls>--cpp11</MiscControls>
               <Define></Define>
               <Undefine></Undefine>
               <IncludePath>.\Source</IncludePath>
@@ -398,6 +398,16 @@
               <FileName>HardfaultHandler.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\Source\HardfaultHandler.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AY3IO.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Source\AY3IO.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>AY3.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\Source\AY3.cpp</FilePath>
             </File>
           </Files>
         </Group>
